NCC/judge/error/31/31_1.txt
/home/saurabh/CTD/NCC/judge/user/31/1/31_1.cpp: In function ‘int main()’:
/home/saurabh/CTD/NCC/judge/user/31/1/31_1.cpp:17:9: error: expected primary-expression before ‘}’ token
         }
         ^
